3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

common/living.c: don't ignore exp gained in a skill you don't know yet.
Nicolas Weeger 2007-06-04

Apply patch #1638868: Ident skills cover larger area with exp courtesy Aaron Baugher.
 server/skills.c
Nicolas Weeger 2007-06-03

Fix uninitialized memory / invalid memory access.
 common/arch.c treasure.c
Nicolas Weeger 2007-06-01

Fix bug #1729192: Writing any spellscroll requires positive grace.
 server/skills.c
Nicolas Weeger 2007-06-01

Implement feature request #1724356: logging improvements.
Apply modified patch from Wart.
New settings log_timestamp and log_timestamp_format to control behaviour.
Log player creation.
 common/init.c logger.c
 include/global.h
 lib/settings
 server/c_misc.c init.c
Nicolas Weeger 2007-05-30
    
Fix bug #1726632: After useing a # of times on the forge..
server/alchemy.c: item may change, so its weight too. This leads to invalid carrying.
Nicolas Weeger 2007-05-30

lib/formulae: fix bug #1726561: formulae for potion_heal needs supreme potion of life.
Nicolas Weeger 2007-05-28

server/apply.c: food/drink can't be eaten if no_pick is set.
Nicolas Weeger 2007-05-26

Implement feature request #1653768: Pants/legs
 common/item.c
 include/object.h
Nicolas Weeger 2007-05-24

server/time.c: allow plugins to override the usual move process.
Nicolas Weeger 2007-05-24

Add party rejoin at login. New command 'party_rejoin' to control the behaviour.
 include/player.h sproto.h
 server/c_party.c commands.c login.c player.c
 lib/help/party_rejoin
 lib/Makefile.am
Nicolas Weeger 2007-05-21

Fix bug #1713140: sustenance overflow.
include/player.h: change digestion from sint8 to sint16. Change other fields